--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body{
 }
 
 .container{
-    width: 500px;
+    width: 700px;
     height: 100%;
     background-color: green;
     margin: auto;
@@ -22,8 +22,16 @@ body{
 .next{
     width: 50px;
     height: 100%;
+    font-size: 50px;
+    display: flex;
+    align-self: center;
+    padding: 10px;
 }
 
 .photo{
     width: calc(100% - 100px);
+}
+
+.photo img{
+    width: 100%;
 }
