--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body{
     background-color: green;
     margin: auto;
     display: flex;
+    align-self: center;
 }
 
 .prev,
@@ -34,4 +35,9 @@ body{
 
 .photo img{
     width: 100%;
+}
+
+.selettori li{
+    color: honeydew;
+    list-style: none;
 }
